#356 fixed layout scrollbar bug and title

--- a/sormas-ui/src/main/webapp/VAADIN/themes/sormas/components/menu.scss
+++ b/sormas-ui/src/main/webapp/VAADIN/themes/sormas/components/menu.scss
@@ -9,7 +9,7 @@ $valo-menu-background-color: $s-default-color !default;
     border-right-color: $v-focus-color;
   
     .valo-menu-title {
-      padding: 16px;
+      padding: 36px 12px;
       background: $v-background-color;
       color: $s-default-color;
       font-weight: bold;
